fixed the animation size on mobile2

--- a/public/src/css/app.css
+++ b/public/src/css/app.css
@@ -303,8 +303,8 @@ footer::after {
     height: 150px;
   }
   .gooey {
-    width: 250px;
-    height: 200px;
+    width: 220px;
+    height: 180px;
   }
   .gooey-text {
     font-size:20px;
